--- a/Wzic/Wzic/Views/Shared/videos.cshtml
+++ b/Wzic/Wzic/Views/Shared/videos.cshtml
@@ -32,6 +32,7 @@
 
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/videoss.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=onClientLoad" type="text/javascript"></script>
     @RenderSection("scripts", required: false)
 </body>
 
