--- a/Wzic/Wzic/Views/Home/Artists.cshtml
+++ b/Wzic/Wzic/Views/Home/Artists.cshtml
@@ -6,7 +6,7 @@
 
 
 <!-- Swiper -->
-<body id="Artists">
+<div id="Artists">
     <div class="swiper-container">
         <div class="swiper-wrapper">
             @Html.Raw(ViewBag.View);
@@ -19,6 +19,6 @@
 
     <!-- Add Arrows -->
     <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-</body>
+    <di+v class="swiper-button-prev"></di+v>
+</div>
 
