--- a/Wzic/Wzic/Views/Home/Songs.cshtml
+++ b/Wzic/Wzic/Views/Home/Songs.cshtml
@@ -86,7 +86,7 @@
         </div>
 
         <ul class="listOfSongs">
-           @Html.Raw(ViewBag.View);
+           @Html.Raw(ViewBag.View)
         </ul>
 
     </div>
