--- a/Wzic/Wzic/Views/Shared/_Layout.cshtml
+++ b/Wzic/Wzic/Views/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/homes.css" rel="stylesheet" />
+    <link href="~/Content/home.css" rel="stylesheet" />
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/swiper.min.css" rel="stylesheet" />
-    <link href="~/Content/slider.css" rel="stylesheet" />
+    <link href="~/Content/artists.css" rel="stylesheet" />
     <link href="~/Content/song.css" rel="stylesheet" />
-    <link href="~/Content/indexs.css" rel="stylesheet" />
+    <link href="~/Content/index_home.css" rel="stylesheet" />
     <link href="~/Content/videoss.css" rel="stylesheet" />
     <link href="~/Content/login_bootstrap.css" rel="stylesheet" />
     @Scripts.Render("~/bundles/modernizr")
@@ -48,11 +48,13 @@
         </div>
         
     </div>
+    <input type="checkbox" style="visibility:hidden" id="check"/>
+    <div id="tonggle-menu"><label for="check"><i class="fa fa-bars" id="icon-menu"></i></label></div>
     <ul class="menuBar">
         <li><i class="fa fa-home"></i>@Html.ActionLink("Home", "Index", "Home")</li>
         <li><i class="fa fa-headphones"></i>@Html.ActionLink("Songs", "Songs", "Home")</li>
         <li><i class="fa fa-user-circle"></i>@Html.ActionLink("Artists", "Artists", "Home")</li>
-        <li><i class="fa fa-viadeo"></i>@Html.ActionLink("Videos", "Videos", "Home")</li>
+        <li><i class="fa fa-play-circle"></i>@Html.ActionLink("Videos", "Videos", "Home")</li>
     </ul>
   
 
@@ -64,7 +66,7 @@
     <script src="~/Scripts/swiper.min.js"></script>
     <script src="~/Scripts/home.js"></script>
     <script src="~/Scripts/artistss.js"></script>
-    <script src="~/Scripts/songss.js"></script>
+    <script src="~/Scripts/songs.js"></script>
 
  
     @RenderSection("scripts", required: false)
