--- a/Wzic/Wzic/Content/song.css
+++ b/Wzic/Wzic/Content/song.css
@@ -1,5 +1,5 @@
 /* CSS Document */
-body#bodySongs {
+#bodySongs {
     padding: 0;
     margin: 0;
     background-image: url('../images/Songs/backgroundSong.png');
